src/App.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: 'Montserrat', sans-serif;
}

li {
  cursor: pointer;
}

ul {
  list-style-type: none;
}

body {
  overflow-x: hidden;
  background-color: lightcoral;
}

.container {
  padding: 0 32px;
  padding-top: 80px;
  min-height: 300vh;
}

.row {
  max-width: 1300px;
  width: 100%;
  margin: 0 auto;
}

/* 

DARK-MODE

*/

body.dark {
  background-color: lightcoral;
}

/* 

NAV

*/

.App {
}

.nav__container {
  position: fixed;
  width: 100%;
  background-color: rgba(0, 0, 0, 0.1);
  backdrop-filter: blur(5px);
  image-rendering: pixelated;
  z-index: 999;
}

nav {
  width: 100%;
  margin: 0 auto;
  max-width: 1300px;

  height: 80px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 16px;
}

.nav__logo {
  height: 60px;
  user-select: none;
}

.nav__links {
  display: flex;
  align-items: center;
  font-size: 18px;
  z-index: 0;
  user-select: none;
}

.nav__link {
  color: white;
  position: relative;
  padding: 8px 10px;
  margin: 8px;
  text-decoration: none;
}

.nav__link:hover {
  color: yellow;
}

.nav__link.active > p {
  color: yellow;
}

.selected {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: red;
  border-radius: 12px;
  z-index: -1;
}

/* SWITCH */

.switch {
  width: 60px;
  height: 30px;
  background-color: white;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  border-radius: 50px;
  padding: 5px;
  cursor: pointer;
  border: 1px solid black;
  margin-left: 8px;
}

.switch[data-ison='true'] {
  justify-content: flex-end;
  background-color: black;
}

.handle {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 20px;
  height: 20px;
  background-color: black;
  border-radius: 40px;
  background-position: center;
}

.handle[data-ison='true'] {
  background-color: white;
}

.sun--yellow {
  color: yellow;
}

.moon--white {
  color: blue;
}

/* 

Modal

*/

.modal__button {
  display: none;
  margin-left: 16px;
}

/* 

Home

*/

.home__container {
  overflow: hidden;
  position: relative;
  min-width: 100vw;
  min-height: 100vh;

  display: flex;
  justify-content: center;
  align-items: center;
}

.background-image--wrapper {
  position: absolute;
  top: -100px;
  left: -100px;
  right: -100px;
  bottom: -100px;
}

.background-image {
  width: 100%;
  height: 100%;
  object-fit: cover;

  z-index: -1;
}

.home__info--wrapper {
  z-index: 100;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

/* 

Resume

*/

.parallax--wrapper {
  overflow: hidden;
  position: relative;
  min-height: 40vh;
  min-width: 100vw;

  display: flex;
  justify-content: center;
  align-items: center;
}

.parallax-background-image--wrapper {
  position: absolute;
  top: -100px;
  left: -100px;
  right: -100px;
  bottom: -100px;
}

.parallax-background-image {
  width: 100%;
  height: 100%;
  object-fit: cover;

  z-index: -1;
}

.parallax__info--wrapper {
  z-index: 100;
}

.resume__container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.resume__title {
}

.rpv-core__inner-page {
  background-color: transparent;
}

/* 

Modal

*/

.modal__container {
  position: absolute;
  top: 80px;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.5);
}

.modal {
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  width: 300px;
  height: 100vh;
  background-color: lightblue;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-direction: column;
}

.modal__links {
  display: flex;
  flex-direction: column;
}

.modal__link {
  text-decoration: none;
  margin-top: 32px;
  color: white;
  font-size: 32px;
}

/* 

Footer

*/

footer {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: black;
}

.footer__description {
  padding: 2.5rem 0;
  color: white;
}

@media (max-width: 800px) {
  .nav__link {
    display: none;
  }
  .modal__button {
    display: block;
  }
}

